add:faster r cnn

--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -4983,7 +4983,7 @@
    "source": [
     "import cv2\n",
     "import numpy as np\n",
-    "# from google.colab.patches import cv2_imshow # uncomment this line to run in google colab\n",
+    "from google.colab.patches import cv2_imshow # uncomment this line to run in google colab\n",
     "\n",
     "# Load YOLO\n",
     "net = cv2.dnn.readNet(\"yolov3.weights\", \"yolov3.cfg\")\n",
@@ -5047,12 +5047,12 @@
     "gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "\n",
     "# Display the grayscale image using cv2_imshow\n",
-    "# cv2_imshow(gray_image) # uncomment this line to run in google colab\n",
-    "cv2.imshow('gray_image', gray_image) # comment this line to run in google colab\n",
+    "cv2_imshow(gray_image) # uncomment this line to run in google colab\n",
+    "# cv2.imshow('gray_image', gray_image) # comment this line to run in google colab\n",
     "\n",
     "# If you want to display the original image as well:\n",
-    "# cv2_imshow(image) # uncomment this line to run in google colab\n",
-    "cv2.imshow('image', image) # comment this line to run in google colab\n",
+    "cv2_imshow(image) # uncomment this line to run in google colab\n",
+    "# cv2.imshow('image', image) # comment this line to run in google colab\n",
     "\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()\n"
